@@ -3178,3 +3178,8 @@
 	  functional (although more testing is necesary).
 
 6.22 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>
+
+	* include/semaphore.h, sched/sem_holders.c, and lib/semaphore/sem_init.c:
+	  Fix some strange (and probably wrong) list handling when
+	  CONFIG_PRIORITY_INHERITANCE and CONFIG_SEM_PREALLOCHOLDERS are defined.
+	  This list handling was probably causing errors reported by Mike Smith
